--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
 
 Add the image of a Golden Eagle here:
-
+<img src="animal/birds/raptors/eagles/golden_eagle.jpg" alt="A Golden Eagle">
 Add the image of Sandstone here:
-
+<img src="mineral/sedimentary/sandstone.jpg" alt="Sandstone:The Mineral">
 Add the image of Bruce the Shark here:
-
+<img src="animals/fish/sharks/movie_sharks.jpg" alt= "The Famous Movie Shark">
 Create a link to the exercise2.html file in the "vegetable" folder here:
-
+<a href="vegetable/exercise2.html"> </a>
 </body>
