--- a/vegetable/exercise2.html
+++ b/vegetable/exercise2.html
@@ -7,9 +7,10 @@
 <body>
 
 Add all the images of flowers here:
-
+<img src="small/flowers/roses.jpg" alt="Roses">
+<img src="small/flowers/tuilip" alt="Tulip">
 Add the image of the sequoia tree here:
-
+<img src="big/trees/spruce.jpg" alt="Srpuce">
 Create a link to the exercise3.html file in the "mammals" folder here:
-
+<a href= "../animals/mammals/exercise3.html"> Exercise 3 Link </a>
 </body>
