--- a/vegetable/exercise2.html
+++ b/vegetable/exercise2.html
@@ -8,9 +8,9 @@
 
 Add all the images of flowers here:
 <img src="small/flowers/roses.jpg" alt="Roses">
-<img src="small/flowers/tuilip" alt="Tulip">
+<img src="small/flowers/tulip.jpg" alt="Tulip">
 Add the image of the sequoia tree here:
-<img src="big/trees/spruce.jpg" alt="Srpuce">
+<img src="big/trees/spruce_tree.jpg" alt="Spruce">
 Create a link to the exercise3.html file in the "mammals" folder here:
-<a href= "../animals/mammals/exercise3.html"> Exercise 3 Link </a>
+<a href= "../animal/mammals/exercise3.html"> Exercise 3 Link </a>
 </body>
