--- a/animal/mammals/exercise3.html
+++ b/animal/mammals/exercise3.html
@@ -7,9 +7,9 @@
 <body>
 
 Add all the images of carnivores here:
-<img src="animal/mammals/carnivores/tiger.jpg" alt="The Tiger">
+<img src="carnivores/tiger.jpg" alt="The Tiger">
 Add the image of Granite here:
-<img src="../../mineral/ingenous/granite.jpg" alt="Granite">
+<img src="../../mineral/igenous/granite.jpg" alt="Granite">
 Add the image of Rosemary here
 <img src="../../vegetable/small/herbs/rosemary.jpg" alt="Rosemary"
 Create a link back to the index.html file here:
